# scratcher

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: application.cpp  application.h  audio_player.cpp  audio_player.h  simple_audio_source.hpp
